fix: add Navigation mobile view behaviour

--- a/culture-portal/src/scss/navigation.scss
+++ b/culture-portal/src/scss/navigation.scss
@@ -26,7 +26,6 @@
   }
 
   @media screen and (max-width: 520px){
-    display: none;
     position: fixed;
     top: 0;
     bottom: 0;
